# xsynth-clib

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.github/workflows/: build.yml
src/: consts.rs  handles.rs  lib.rs  realtime.rs  soundfont.rs  utils.rs
